@@ -1,11 +1,16 @@
-(defproject local.1st/clj-helpers-sentry "0.1.1"
-  :description "FIXME: write description"
-  :url "http://example.com/FIXME"
+(defproject net.tbt-post/sentry-tiny "0.1.2"
+  :description "Tiny Sentry Interface for Clojure"
+  :url "https://github.com/source-c/sentry-tiny"
   :license {:name "Eclipse Public License"
-            :url "http://www.eclipse.org/legal/epl-v10.html"}
-  :dependencies [[org.clojure/clojure "1.8.0"]
-                 [cheshire "5.7.1"]
+            :url  "http://www.eclipse.org/legal/epl-v10.html"}
+  :dependencies [[org.clojure/clojure "1.9.0"]
+                 [cheshire "5.8.0"]
                  [http-kit "2.2.0"]
                  [danlentz/clj-uuid "0.1.7"]]
-  :repositories [["private-jars" "http://10.10.3.4:9180/repo"]]
-  :deploy-repositories [["private-jars" "http://10.10.3.4:9180/repo"]])
+  :omit-source true
+  :plugins [[lein-ancient "0.6.15"]]
+  :profiles {:uberjar {:aot :all :jvm-opts ~(let [version (System/getProperty "java.version")
+                                                  [major _ _] (clojure.string/split version #"\.")]
+                                              (if (>= (Integer. major) 9) ;; FIXME: drop this tricky hack/hacky trick
+                                                ["--add-modules" "java.xml.bind"]
+                                                []))}})
